--- a/src/Sheets/Row Template/RowComponent.module.css
+++ b/src/Sheets/Row Template/RowComponent.module.css
@@ -169,7 +169,7 @@
   color: #86868b;
   cursor: pointer;
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 6px;
+  /* padding: 6px; */
   border-radius: 8px;
 }
 
